--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,10 @@ flutter:
   uses-material-design: true
   assets:
     - assets/scattered clouds.jpg
+  fonts:
+  - family: MaterialIcons
+    fonts:
+      - asset: fonts/MaterialIcons-Regular.otf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
